--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
 DATABASE_URL='postgres://postgres:password@db:5432/product_db'
+DB_USER='postgres'
+DB_PASSWORD='password'
+DB_NAME='product_db'
+
+NEXT_PUBLIC_API_URL='http://localhost:3000/api'
