--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "migrate:generate": "npx drizzle-kit generate",
-    "migrate:push": "npx drizzle-kit push"
+    "lint": "next lint"
   },
   "dependencies": {
     "drizzle-orm": "^0.44.2",
